--- a/osgp/platform/pom.xml
+++ b/osgp/platform/pom.xml
@@ -93,20 +93,17 @@
     <!-- Domain -->
     <module>osgp-domain-core</module>
     <module>osgp-domain-logging</module>
-    <module>osgp-domain-microgrids</module>
 
     <module>osgp-adapter-domain-shared</module>
 
     <module>osgp-adapter-domain-admin</module>
     <module>osgp-adapter-domain-core</module>
-    <module>osgp-adapter-domain-microgrids</module>
 
     <!-- Webservice -->
     <module>osgp-adapter-ws-shared</module>
     <module>osgp-adapter-ws-shared-db</module>
     <module>osgp-adapter-ws-core</module>
     <module>osgp-adapter-ws-admin</module>
-    <module>osgp-adapter-ws-microgrids</module>
 
     <!-- Core -->
     <module>osgp-logging</module>
@@ -122,7 +119,6 @@
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
-
       <modules>
         <module>osgp-adapter-domain-publiclighting</module>
         <module>osgp-adapter-domain-tariffswitching</module>
@@ -130,29 +126,41 @@
         <module>osgp-adapter-ws-tariffswitching</module>
       </modules>
     </profile>
+
     <profile>
       <id>smhe</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
-
       <modules>
         <module>osgp-adapter-domain-smartmetering</module>
         <module>osgp-adapter-ws-smartmetering</module>
       </modules>
     </profile>
+
     <profile>
       <id>da</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
-
       <modules>
         <module>osgp-domain-distributionautomation</module>
         <module>osgp-adapter-domain-distributionautomation</module>
         <module>osgp-adapter-kafka-distributionautomation</module>
         <module>osgp-adapter-kafka-logging</module>
         <module>osgp-adapter-ws-distributionautomation</module>
+      </modules>
+    </profile>
+
+    <profile>
+      <id>mg</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <modules>
+        <module>osgp-adapter-domain-microgrids</module>
+        <module>osgp-adapter-ws-microgrids</module>
+        <module>osgp-domain-microgrids</module>
       </modules>
     </profile>
   </profiles>
