--- a/public-lighting-demo-app/pom.xml
+++ b/public-lighting-demo-app/pom.xml
@@ -13,7 +13,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.opensmartgridplatform</groupId>
-  <artifactId>os-webapps</artifactId>
+  <artifactId>public-lighting-demo-app</artifactId>
   <version>5.14.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
