FDP-252: microgrids enabled
Signed-off-by: Sander Verbruggen <sander@verbruggen.ws>

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -114,7 +114,7 @@
     <profile>
       <id>mg</id>
       <activation>
-        <activeByDefault>false</activeByDefault>
+        <activeByDefault>true</activeByDefault>
       </activation>
       <modules>
         <module>cucumber-tests-platform-microgrids</module>
