FDP-46 ~ Refactors MQTT configuration in protocol adapter
Signed-off-by: Sander van der Heijden <sander.van.der.heijden@cgi.com>

--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
@@ -36,12 +36,13 @@ mqtt.default.port=8883
 mqtt.default.qos=AT_LEAST_ONCE
 mqtt.default.topics=+/measurement,+/congestion
 
-mqtt.ssl.enabled=true
-#mqtt.ssl.client.truststore.location=/etc/osp/keys/mqtt/mqtt_client_truststore.jks
-mqtt.ssl.client.truststore.location=mqtt_client_truststore.jks
-mqtt.ssl.client.truststore.password=123456
-mqtt.ssl.client.truststore.type=JKS
-mqtt.ssl.client.authentication.enabled=false
+mqtt.client.ssl.enabled=true
+# Truststore could be loaded from external file (using "file:" prefix):
+#mqtt.client.ssl.truststore.location=file:/etc/osp/keys/mqtt/mqtt_client_truststore.jks
+# or use a default from classpath (using "classpath:" prefix) for local development/testing:
+mqtt.client.ssl.truststore.location=classpath:mqtt_client_truststore.jks
+mqtt.client.ssl.truststore.password=123456
+mqtt.client.ssl.truststore.type=JKS
 
 # =========================================================
 # MESSAGING CONFIG
