FDP-46 ~ Refactors Mqtt client SSL configuration
Signed-off-by: Sander van der Heijden <sander.van.der.heijden@cgi.com>

--- a/osgp/shared/shared/pom.xml
+++ b/osgp/shared/shared/pom.xml
@@ -185,6 +185,12 @@
       <artifactId>quartz</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.hivemq</groupId>
+      <artifactId>hivemq-mqtt-client</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- Junit -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
