--- a/super/pom.xml
+++ b/super/pom.xml
@@ -137,6 +137,7 @@
     <!-- spring-kafka-test needs a 2.12 version of the scala libraries -->
     <scala.lang.version>2.12.11</scala.lang.version>
     <lombok.version>1.18.12</lombok.version>
+    <hivemq-mqtt-client.version>1.2.0</hivemq-mqtt-client.version>
   </properties>
 
   <dependencyManagement>
@@ -756,6 +757,12 @@
         <artifactId>activemq-pool</artifactId>
         <version>${apache.activemq.version}</version>
       </dependency>
+
+    <dependency>
+      <groupId>com.hivemq</groupId>
+      <artifactId>hivemq-mqtt-client</artifactId>
+      <version>${hivemq-mqtt-client.version}</version>
+    </dependency>
 
       <!-- Orika (mapping framework) -->
       <dependency>
