--- a/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
+++ b/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
@@ -53,6 +53,13 @@ soap.message.printing.enabled=true
 
 application.name=OSGP_ADAPTER_WS_SMARTMETERING
 
+# Key to decrypt content coming from osgp
+osgp.rsa.private.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-protocol-adapter-rsa-private.key
+
+# Key to encrypt content going to smart metering application
+smartmetering.rsa.public.key.resource=file:/etc/osp/smartmetering/keys/platform/osgp-protocol-adapter-rsa-public.key
+
+
 # =========================================================
 # MESSAGING CONFIG
 # =========================================================
