--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/main/resources/osgp-adapter-protocol-dlms.properties
@@ -50,6 +50,11 @@ paging.default.pagesize=15
 # DLMS
 dlms.port.server=9598
 
+# Delay in seconds when opening multiple consecutive connections to the same device.
+# Applied when switching between the DLMS public client and the management client in order to
+# synchronize the invocation counter for devices that depend on it.
+dlms.connections.delay.seconds=10
+
 # Configuration for pinging devices before setting up a DLMS device connection
 device.ping.enabled=false
 # Number of echo requests to send, set to 0 for default
