Update cucumber test

--- a/integration-tests/cucumber-tests-platform-smartmetering/src/test/resources/cucumber-tests-platform-smartmetering.properties
+++ b/integration-tests/cucumber-tests-platform-smartmetering/src/test/resources/cucumber-tests-platform-smartmetering.properties
@@ -50,3 +50,5 @@ jaxb2.marshaller.context.path.smartmetering.notification=org.opensmartgridplatfo
 
 web.service.notification.context=/notifications
 web.service.notification.port=8843
+
+application.public.key.resource=/etc/osp/smartmetering/keys/platform/smartmetering-rsa-public.key
