--- a/osgp/platform/pom.xml
+++ b/osgp/platform/pom.xml
@@ -108,14 +108,12 @@
     <!-- Core -->
     <module>osgp-logging</module>
     <module>osgp-core</module>
-
-    <!-- Other -->
-    <module>osgp-secret-management</module>
   </modules>
 
   <profiles>
     <profile>
-      <id>flexovl</id>
+      <!-- Public Lighting -->
+      <id>pl</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
@@ -128,7 +126,8 @@
     </profile>
 
     <profile>
-      <id>smhe</id>
+      <!-- Smart meter -->
+      <id>sm</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
@@ -139,6 +138,7 @@
     </profile>
 
     <profile>
+      <!-- Distribution Automation -->
       <id>da</id>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -149,10 +149,12 @@
         <module>osgp-adapter-kafka-distributionautomation</module>
         <module>osgp-adapter-kafka-logging</module>
         <module>osgp-adapter-ws-distributionautomation</module>
+        <module>osgp-secret-management</module>
       </modules>
     </profile>
 
     <profile>
+      <!-- MicroGrids -->
       <id>mg</id>
       <activation>
         <activeByDefault>true</activeByDefault>
@@ -162,6 +164,11 @@
         <module>osgp-adapter-ws-microgrids</module>
         <module>osgp-domain-microgrids</module>
       </modules>
+    </profile>
+
+    <profile>
+      <!-- Grid eXchange Fabric -->
+      <id>gxf</id>
     </profile>
 
     <profile>
