--- a/osgp/platform/pom.xml
+++ b/osgp/platform/pom.xml
@@ -134,6 +134,7 @@
       <modules>
         <module>osgp-adapter-domain-smartmetering</module>
         <module>osgp-adapter-ws-smartmetering</module>
+        <module>osgp-secret-management</module>
       </modules>
     </profile>
 
