--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
@@ -32,7 +32,7 @@ entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.protocol.mqtt.d
 
 # MQTT
 mqtt.default.connect.to.broker=true
-mqtt.default.connect.to.devices=true
+mqtt.default.subscribe.to.topics.for.devices=true
 mqtt.default.host=localhost
 mqtt.default.port=8883
 mqtt.default.qos=AT_LEAST_ONCE
